fixed scrollbar at store-popup and basket popup

--- a/markup/static/scss/etc/basket-popup.scss
+++ b/markup/static/scss/etc/basket-popup.scss
@@ -15,13 +15,12 @@ body .basket-popup .owl-theme .owl-nav .owl-prev:hover {
 	left: -8px;
 }
 .basket-popup {
-	margin-bottom: 50px;
 	position: relative;
 	top: 0;
 	left: 50%;
-	-webkit-transform: translate(-50%, 60px);
-	-ms-transform: translate(-50%, 60px);
-		transform: translate(-50%, 60px);
+	-webkit-transform: translate(-50%, 0);
+	-ms-transform: translate(-50%, 0);
+		transform: translate(-50%, 0);
 	background-color: #FFFFFF;
 	width: 100%;
 	max-width: 990px;
